--- a/config.yaml
+++ b/config.yaml
@@ -6,5 +6,5 @@ cloud_env_url: https://cloud.hkciot.com/#/login
 cloud_env_username: hkctest
 cloud_env_password: Aa123456
 
-test_terminal_id: HD00C0001
+test_terminal_id: LZ0130005
 test_terminal_name: test_real_ebox
